src/kernel/include/uart.h

#pragma once

#include <stdbool.h>

void uart_init();
void uart_puts(const char *str);